@@ -37,6 +37,7 @@ const int TEST_CRITICAL = 3;
 // Various tests to be run at starttime
 int runTests();
 const char *getHomeDir();
+void pppdVersion(int *version, int *modification, int *patch);
 
 #ifdef linux
 bool ppp_available(void);
