@@ -1,3 +1,8 @@
+1999-10-02  Harri Porten  <porten@kde.org>
+
+	* runtests.cpp: determine pppd version. Will be needed to check
+	for support of new features
+
 1999-09-26  Harri Porten  <porten@kde.org>
 
 	* runtests.cpp (ppp_available): Linux kernels >= 2.2.13 will have
